Fixed onClick, cardSelector needs some improvement  with the z-index

--- a/web_portfolio/src/components/motion/cardSlider.module.css
+++ b/web_portfolio/src/components/motion/cardSlider.module.css
@@ -7,3 +7,15 @@
    width: 100vw;
    justify-content: center;
 }
+
+.leftArrow {
+   position: absolute;
+   left: 20%;
+
+   transform: rotateY(180deg);
+}
+
+.rightArrow {
+   position: absolute;
+   right: 20%;
+}
